# sec-filing-rag

./: init.sh  npm-install.sh  start.sh
.github/workflows/: ruff-autofix.yml
apps/nextjs/: .env.template  .gitignore  README.md  components.json  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts
apps/nextjs/app/: layout.tsx  page.tsx
apps/nextjs/app/api/webhook/stripe/: route.ts
apps/nextjs/app/dashboard/: DashboardClient.tsx  layout.tsx
apps/nextjs/app/dashboard/billing/: page.tsx
apps/nextjs/app/dashboard/settings/: page.tsx
apps/nextjs/app/payment/failed/: page.tsx
apps/nextjs/app/payment/success/: page.tsx
apps/nextjs/app/pricing/: page.tsx
apps/nextjs/components/: DashboardNav.tsx  Navbar.tsx  ResearchGrid.tsx  ResearchResults.tsx  Submitbuttons.tsx  ThemeProvider.tsx  UserNav.tsx  UserSection.tsx  app-sidebar.tsx  nav-main.tsx  nav-user.tsx
apps/nextjs/components/data/: FeatureItems.ts  InsightDetail.ts
apps/nextjs/components/ui/: InsightCard.tsx
apps/nextjs/lib/: stripe.ts
apps/nextjs/prisma/: schema.prisma
apps/nextjs/styles/: global.css
apps/python/: .env.template  .gitignore  README.md  config.py  pyproject.toml
apps/python/utils/: display_data.py  sec_chunking_enhancer.py  sec_filings_processing.py  stock_list.py  vectorization.py
