[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.6"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "edgartools>=4.14.0",
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "tabulate>=0.9.0",
    "typing>=3.10.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ruff>=0.13.1",
]
